Add incentive checkbox

--- a/app/config/campaigns.yml
+++ b/app/config/campaigns.yml
@@ -87,3 +87,16 @@ address_provision_options:
   url_key: provadd
   active: true
   param_only: true
+
+membership_incentive:
+  description: Test if incentives help drive memberships
+  reference: "https://phabricator.wikimedia.org/T270068"
+  start: "2020-12-22"
+  end: "2021-12-31"
+  buckets:
+    - "no_incentive"
+    - "incentive"
+  default_bucket: "no_incentive"
+  url_key: incentive
+  active: true
+  param_only: true
