--- a/app/config/campaigns.dev.yml
+++ b/app/config/campaigns.dev.yml
@@ -21,3 +21,8 @@ address_provision_options:
   active: true
   start: "2020-09-20"
   default_bucket: "provisional_address_options"
+
+membership_incentive:
+  active: true
+  start: "2020-12-01"
+  default_bucket: "incentive"
