Inject FunFunFactory as controller argument
Add factory method ("factory factory method") to
EnvironmentBootstrapper, code taken from the old index.php

Add EnvironmentBootstrapper and FunFunFactory as services

Test injecting it into TestController

--- a/config/services.yml
+++ b/config/services.yml
@@ -33,3 +33,15 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+
+    WMDE\Fundraising\Frontend\Infrastructure\EnvironmentBootstrapper:
+        class: WMDE\Fundraising\Frontend\Infrastructure\EnvironmentBootstrapper
+        public: true
+        arguments:
+            - "%env(resolve:APP_ENV)%"
+
+    WMDE\Fundraising\Frontend\Factories\FunFunFactory:
+        class: WMDE\Fundraising\Frontend\Factories\FunFunFactory
+        factory: ['@WMDE\Fundraising\Frontend\Infrastructure\EnvironmentBootstrapper', 'newFunFunFactory']
+        public: true
