--- a/app/config/campaigns.yml
+++ b/app/config/campaigns.yml
@@ -1,102 +1,103 @@
 # Configuration file for defining A/B test campaigns
-#
-# Example
-# skins:
-#    description: Test different skins
-#    reference: "https://phabricator.wikimedia.org/T123"
-#    start: "2017-10-01"
-#    end: "2019-12-31"
-#    buckets:
-#        - "laika"
-#    default_bucket: "laika"
-#
-# Start each campaign with a unique key, that is "campaign name". Then add the following keys:
-# description: (optional) What this campaign is about
-# reference: (optional) URL where you can read more about it, e.g. Phabricator ticket. You need to enclose the URL in quotes
-# start: Start date, in either YYYY-MM-DD or YYYY-MM-DD HH:MM:SS format. If no time is specified, it will be 0:00:00. Timezone is set in app config.
-# end: (Optional) End date, in either YYYY-MM-DD or YYYY-MM-DD HH:MM:SS format. If no time is specified, it will be 23:59:59 of that day. Timezone is set in app config.
-# active: Date-independent toggle for test
-# buckets: List of bucket names
-# default_bucket: used bucket when campaign is not active. Must be listed in buckets.
-# url_key: URL parameter key used for assigning buckets to people
-# param_only: (Optional) Set to true if the campaign should return the default bucket when the url key is not in a request. This is for A/B tests triggered by banners
+campaigns:
+    #
+    # Example for a campaign:
+    # skins:
+    #    description: Test different skins
+    #    reference: "https://phabricator.wikimedia.org/T123"
+    #    start: "2017-10-01"
+    #    end: "2019-12-31"
+    #    buckets:
+    #        - "laika"
+    #    default_bucket: "laika"
+    #
+    # Start each campaign with a unique key, that is "campaign name". Then add the following keys:
+    # description: (optional) What this campaign is about
+    # reference: (optional) URL where you can read more about it, e.g. Phabricator ticket. You need to enclose the URL in quotes
+    # start: Start date, in either YYYY-MM-DD or YYYY-MM-DD HH:MM:SS format. If no time is specified, it will be 0:00:00. Timezone is set in app config.
+    # end: (Optional) End date, in either YYYY-MM-DD or YYYY-MM-DD HH:MM:SS format. If no time is specified, it will be 23:59:59 of that day. Timezone is set in app config.
+    # active: Date-independent toggle for test
+    # buckets: List of bucket names
+    # default_bucket: used bucket when campaign is not active. Must be listed in buckets.
+    # url_key: URL parameter key used for assigning buckets to people
+    # param_only: (Optional) Set to true if the campaign should return the default bucket when the url key is not in a request. This is for A/B tests triggered by banners
 
-membership_call_to_action:
-  description: Display different content for membership call to action on donation confirmation page
-  reference: "https://phabricator.wikimedia.org/T210083"
-  start: "2018-11-29 19:00:00"
-  end: "2019-01-07 23:59:59"
-  buckets:
-  - "regular"
-  - "video"
-  default_bucket: "regular"
-  url_key: mbcat
-  active: true
+    membership_call_to_action:
+      description: Display different content for membership call to action on donation confirmation page
+      reference: "https://phabricator.wikimedia.org/T210083"
+      start: "2018-11-29 19:00:00"
+      end: "2019-01-07 23:59:59"
+      buckets:
+      - "regular"
+      - "video"
+      default_bucket: "regular"
+      url_key: mbcat
+      active: true
 
-amount_options:
-  description: Test different amount options. First two options are the same because we want to avoid having 0 as a possible value of the URL parameter.
-  reference: "https://phabricator.wikimedia.org/T211545"
-  start: "2018-12-12 00:00:00"
-  end: "2018-12-25 23:59:59"
-  buckets:
-  - "5to300_0"
-  - "5to300"
-  - "5to100"
-  - "15to250"
-  - "30to250"
-  - "50to500"
-  default_bucket: "5to300"
-  url_key: amtopt
-  active: true
+    amount_options:
+      description: Test different amount options. First two options are the same because we want to avoid having 0 as a possible value of the URL parameter.
+      reference: "https://phabricator.wikimedia.org/T211545"
+      start: "2018-12-12 00:00:00"
+      end: "2018-12-25 23:59:59"
+      buckets:
+      - "5to300_0"
+      - "5to300"
+      - "5to100"
+      - "15to250"
+      - "30to250"
+      - "50to500"
+      default_bucket: "5to300"
+      url_key: amtopt
+      active: true
 
-compact_design:
-  description: Test form design variation where the design is more compact by moving elements onto the same row and generally closer together.
-  reference: "https://phabricator.wikimedia.org/T236667"
-  start: "2019-11-05 14:00:00"
-  end: "2019-12-31 23:00:00"
-  buckets:
-    - "classic"
-    - "compact"
-  default_bucket: "classic"
-  url_key: compact
-  active: true
-  param_only: true
+    compact_design:
+      description: Test form design variation where the design is more compact by moving elements onto the same row and generally closer together.
+      reference: "https://phabricator.wikimedia.org/T236667"
+      start: "2019-11-05 14:00:00"
+      end: "2019-12-31 23:00:00"
+      buckets:
+        - "classic"
+        - "compact"
+      default_bucket: "classic"
+      url_key: compact
+      active: true
+      param_only: true
 
-address_type:
-  description: Test if the address type not being preselected changes the user behaviour of entering nonsense address data.
-  reference: "https://phabricator.wikimedia.org/T247228"
-  start: "2020-09-15"
-  end: "2020-11-02"
-  buckets:
-    - "preselection"
-    - "no_preselection"
-  default_bucket: "no_preselection"
-  url_key: addrpre
-  active: false
-  param_only: false
+    address_type:
+      description: Test if the address type not being preselected changes the user behaviour of entering nonsense address data.
+      reference: "https://phabricator.wikimedia.org/T247228"
+      start: "2020-09-15"
+      end: "2020-11-02"
+      buckets:
+        - "preselection"
+        - "no_preselection"
+      default_bucket: "no_preselection"
+      url_key: addrpre
+      active: false
+      param_only: false
 
-address_provision_options:
-  description: Test adding provisional address type options before choosing a donor type. (Adds "e-mail only" option)
-  reference: "https://phabricator.wikimedia.org/T260023"
-  start: "2020-10-01"
-  end: "2020-12-31"
-  buckets:
-    - "old_address_type_options"
-    - "provisional_address_options"
-  default_bucket: "old_address_type_options"
-  url_key: provadd
-  active: true
-  param_only: true
+    address_provision_options:
+      description: Test adding provisional address type options before choosing a donor type. (Adds "e-mail only" option)
+      reference: "https://phabricator.wikimedia.org/T260023"
+      start: "2020-10-01"
+      end: "2020-12-31"
+      buckets:
+        - "old_address_type_options"
+        - "provisional_address_options"
+      default_bucket: "old_address_type_options"
+      url_key: provadd
+      active: true
+      param_only: true
 
-membership_incentive:
-  description: Test if incentives help drive memberships
-  reference: "https://phabricator.wikimedia.org/T270068"
-  start: "2020-12-22"
-  end: "2021-12-31"
-  buckets:
-    - "no_incentive"
-    - "incentive"
-  default_bucket: "no_incentive"
-  url_key: incentive
-  active: true
-  param_only: true
+    membership_incentive:
+      description: Test if incentives help drive memberships
+      reference: "https://phabricator.wikimedia.org/T270068"
+      start: "2020-12-22"
+      end: "2021-12-31"
+      buckets:
+        - "no_incentive"
+        - "incentive"
+      default_bucket: "no_incentive"
+      url_key: incentive
+      active: true
+      param_only: true
