Fix first EdgeToEdge test
Convert DefaultRouteTest to a Symfony WebTestCase and make all necessary
adjustments to make it run:

- Update App Kernel to include and merge environment- and
  package-specific configuration files. Standardize all Symfony
  configuration files on `.yaml` suffix.
- Add test environment config files (`.test.env` and
  `config/services_test.yaml`)
- Add test environment name to PHPUnit config
- Add reading of env file to test environment `bootstrap.php`
- Fix HTTP Kernel event class names in HTTP Event handers
- Delete LogErrors HTTP event handler - logging of errors and exceptions
  should be delegated to the Symfony default setup (will be configured in a later commit)

Other tests, especially the ones that modify configuration or state in
FunFunFactory, need more refactoring.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -45,3 +45,12 @@ services:
         class: WMDE\Fundraising\Frontend\Factories\FunFunFactory
         factory: ['@WMDE\Fundraising\Frontend\Infrastructure\EnvironmentBootstrapper', 'newFunFunFactory']
         public: true
+
+    WMDE\Fundraising\Frontend\Infrastructure\EventHandling\DomainEventHandler\BucketLoggingHandler:
+        class: WMDE\Fundraising\Frontend\Infrastructure\EventHandling\DomainEventHandler\BucketLoggingHandler
+        factory: ['@WMDE\Fundraising\Frontend\Factories\FunFunFactory', 'getBucketLoggingHandler']
+
+    WMDE\Fundraising\Frontend\Infrastructure\CookieBuilder:
+        class: WMDE\Fundraising\Frontend\Infrastructure\CookieBuilder
+        factory: ['@WMDE\Fundraising\Frontend\Factories\FunFunFactory', 'getCookieBuilder']
+
