Try out conditional build for Travis
This introduces a conditional build script for Travis, that returns the
number of changes for client-side and PHP code.

The Travis configuration does not branch different CI actions yet, just
outputs different values to check if the environment variables get set.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,10 @@ install:
 before_script:
   - bash build/travis/createLocalTestConfig.sh
   - echo "APP_ENV=dev" > .env
+  - source build/travis/branch_changes.sh
 
 script:
+  - if [ "$CHANGES_IN_JS" != "0" ]; then echo "there were $CHANGES_IN_JS JS changes"; else echo "No JS changes"; fi
   - make setup
   - make clear
   - make ci-with-coverage
