--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
 		"symfony/filesystem": "^5.1",
 		"symfony/framework-bundle": "^5.1",
 		"symfony/http-foundation": "^5.1",
+		"symfony/monolog-bundle": "^3.6",
 		"symfony/property-access": "^5.1",
 		"symfony/stopwatch": "^5.1",
 		"symfony/twig-bridge": "^5.1",
