--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,6 +16,7 @@
 	verbose="false"
 	>
     <php>
+        <server name="APP_ENV" value="test" force="true" />
         <env name="APP_ENV" value="test" force="true" />
     </php>
   <coverage processUncoveredFiles="true">
