Make PHPUnit fail faster
This change will halt a PHPUnit run if it encounters errors or failed
tests. This will speed up our CI and local testing.

In my day-today work I rarely need the information which tests fail and
I'm rather interested in fast feedback.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,8 +9,8 @@
 	convertErrorsToExceptions="true"
 	convertNoticesToExceptions="false"
 	convertWarningsToExceptions="true"
-	stopOnError="false"
-	stopOnFailure="false"
+	stopOnError="true"
+	stopOnFailure="true"
 	stopOnIncomplete="false"
 	stopOnSkipped="false"
 	verbose="false"
