Fix Route generation for Symfony
Repurpose the `Routes` class to keep the named route constants. Removed
the Silex router initialization.

Use named routes where tests were failing due to route name changes.

Create service definition for URL generator and inject it as a setter
dependency for FunFunFactory. Future changes should inject it directly
into controllers, to make dependency tree more visible and reduce
reliance one Factory.
Use default service definition in tests, FakeUrlGenerator is now only
used when explicitly assigned in tests.

Remove TestEnvironment dependency from MailerTemplatingFactoryTest and
MailTemplatesTest - they now get the FunFunFactory with modified
configuration through the Symfony DI container, using the
TestEnvironmentBootstrapper.

Improve some tests - use assertResponseRedirects from BrowserKitAssertionsTrait

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -169,6 +169,10 @@ handle_paypal_membership_fee_payments:
     methods: [POST]
     controller: 'WMDE\Fundraising\Frontend\App\Controllers\Payment\PaypalNotificationControllerForMembershipFee::index'
 
+set_cookie_preferences:
+    path: /set-cookie-preferences
+    controller: 'WMDE\Fundraising\Frontend\App\Controllers\SetCookiePreferencesController::index'
+
 index:
     path: /
     methods: [ POST, GET ]
