Integrate CLI with Symfony
Delete custom CLI entry point and use Symfony CLI, which will allow for
auto-injecting services like the factory.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -31,6 +31,10 @@ services:
         resource: '../app/EventHandlers/*'
         exclude: '../app/EventHandlers/{LogErrors}.php'
 
+    # register console commands
+    WMDE\Fundraising\Frontend\Cli\:
+        resource: '../cli/*'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
