--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,6 @@
 		"ext-sodium": "*",
 
 		"twig/twig": "^3.0",
-		"pimple/pimple": "~3.0",
 
 		"wmde/email-address": "~1.0",
 		"wmde/euro": "~1.0",
@@ -48,8 +47,7 @@
 		"nikic/php-parser": "~4.0",
 		"psr/log": "~1.0",
 		"remotelyliving/doorkeeper": "^1.4",
-		"swiftmailer/swiftmailer": "~6.2",
-		"vlucas/phpdotenv": "~5.3.0"
+		"swiftmailer/swiftmailer": "~6.2"
 	},
 	"repositories": [
 		{
