--- a/composer.json
+++ b/composer.json
@@ -135,10 +135,7 @@
 		"psr-4": {
 			"WMDE\\Fundraising\\Frontend\\": "src/",
 			"WMDE\\Fundraising\\Frontend\\App\\": "app/",
-			"WMDE\\Fundraising\\Frontend\\Cli\\": "cli/",
-			"DoctrineMigrations\\": [
-				"src/BucketTesting/migrations/"
-			]
+			"WMDE\\Fundraising\\Frontend\\Cli\\": "cli/"
 		}
 	},
 	"autoload-dev": {
