Make SQLite the default test configuration
Remove MySQL configuration from dist file to allow other files to
override it.
Adapt README

--- a/app/config/config.dist.json
+++ b/app/config/config.dist.json
@@ -1,15 +1,6 @@
 {
 	"db": {
-		"driver": "pdo_mysql",
-		"user": "fundraising",
-		"password": "INSECURE PASSWORD",
-		"dbname": "fundraising",
-		"host": "database",
-		"port": 3306,
-		"charset": "utf8",
-		"driverOptions": {
-			"1002": "SET NAMES utf8"
-		}
+		"driver": "pdo_sqlite"
 	},
 	"skin": "laika",
 	"enable-dev-entry-point": false,
