--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     command: /bin/bash -c "envsubst '$$NGINX_HOST $$NGINX_PORT $$PHP_FPM_HOST' < /etc/nginx/conf.d/nginx.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
 
   app:
-    image: "wikimediade/fundraising-frontend:dev"
+    image: "registry.gitlab.com/fun-tech/fundraising-frontend-docker:dev"
     expose:
       - "9000"
     volumes:
