Remove incentive AB test related code
- archives the membership application incentive campaign
- makes incentive option the new default

https://phabricator.wikimedia.org/T276216

--- a/app/config/archived_campaigns.yaml
+++ b/app/config/archived_campaigns.yaml
@@ -52,3 +52,16 @@ anon_form_display:
   url_key: fd
   active: true
   param_only: true
+
+  membership_incentive:
+    description: Test if incentives help drive memberships
+    reference: "https://phabricator.wikimedia.org/T270068"
+    start: "2020-12-22"
+    end: "2021-03-09"
+    buckets:
+      - "no_incentive"
+      - "incentive"
+    default_bucket: "no_incentive"
+    url_key: incentive
+    active: true
+    param_only: true
