Remove call to action test

--- a/app/config/archived_campaigns.yaml
+++ b/app/config/archived_campaigns.yaml
@@ -65,3 +65,15 @@ anon_form_display:
     url_key: incentive
     active: true
     param_only: true
+
+membership_call_to_action:
+  description: Display different content for membership call to action on donation confirmation page
+  reference: "https://phabricator.wikimedia.org/T210083"
+  start: "2018-11-29 19:00:00"
+  end: "2019-01-07 23:59:59"
+  buckets:
+    - "regular"
+    - "video"
+  default_bucket: "regular"
+  url_key: mbcat
+  active: true
