--- a/app/config/archived_campaigns.yaml
+++ b/app/config/archived_campaigns.yaml
@@ -77,3 +77,19 @@ membership_call_to_action:
   default_bucket: "regular"
   url_key: mbcat
   active: true
+
+amount_options:
+  description: Test different amount options. First two options are the same because we want to avoid having 0 as a possible value of the URL parameter.
+  reference: "https://phabricator.wikimedia.org/T211545"
+  start: "2018-12-12 00:00:00"
+  end: "2018-12-25 23:59:59"
+  buckets:
+    - "5to300_0"
+    - "5to300"
+    - "5to100"
+    - "15to250"
+    - "30to250"
+    - "50to500"
+  default_bucket: "5to300"
+  url_key: amtopt
+  active: true
