--- a/app/config/archived_campaigns.yaml
+++ b/app/config/archived_campaigns.yaml
@@ -93,3 +93,16 @@ amount_options:
   default_bucket: "5to300"
   url_key: amtopt
   active: true
+
+compact_design:
+  description: Test form design variation where the design is more compact by moving elements onto the same row and generally closer together.
+  reference: "https://phabricator.wikimedia.org/T236667"
+  start: "2019-11-05 14:00:00"
+  end: "2019-12-31 23:00:00"
+  buckets:
+    - "classic"
+    - "compact"
+  default_bucket: "classic"
+  url_key: compact
+  active: true
+  param_only: true
