--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
 		"wmde/email-address": "~1.0",
 		"wmde/euro": "~1.0",
 		"wmde/clock": "~1.0",
-		"wmde/fundraising-donations": "~5.2",
+		"wmde/fundraising-donations": "dev-master",
 		"wmde/fundraising-memberships": "~5.1",
-		"wmde/fundraising-payments": "~2.0",
+		"wmde/fundraising-payments": "~2.1",
 		"wmde/fundraising-subscriptions": "~2.0.0",
 		"wmde/fundraising-content-provider": "~4.0.0",
 		"wmde/fundraising-address-change": "1.0.2",
