--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 		"wmde/email-address": "~1.0",
 		"wmde/euro": "~1.0",
 		"wmde/clock": "~1.0",
-		"wmde/fundraising-donations": "~5.2",
+		"wmde/fundraising-donations": "dev-master",
 		"wmde/fundraising-memberships": "~4.2",
 		"wmde/fundraising-payments": "~2.0",
 		"wmde/fundraising-subscriptions": "~2.0.0",
