Avoid output when PPL logging fails
The PayPal request expects a specific output, if we output exception
texts, it will fail. Instead, we log to the application log.

Add test to check this behavior

Increase specificity of catch statement to catch only IO exceptions from
the file system.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -48,6 +48,7 @@ services:
         arguments:
             - "%kernel.logs_dir%/paypal_ipn_log.csv"
             - ["handle_paypal_payment_notification", "handle_paypal_membership_fee_payments"]
+            - "@logger"
 
     # We need the bootstrapper to be public to be able to access it in tests
     WMDE\Fundraising\Frontend\Infrastructure\EnvironmentBootstrapper:
