Add endpoint for cities lookup
https://phabricator.wikimedia.org/T280968
https://phabricator.wikimedia.org/T280955

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -209,3 +209,7 @@ status:
     methods: [GET]
     controller: null
 
+api_cities.json:
+    path: /api/v1/cities.json
+    methods: [POST]
+    controller: 'WMDE\Fundraising\Frontend\App\Controllers\Validation\FindCitiesController::index'
