Update Docker database initialisation
See: https://phabricator.wikimedia.org/T280955

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@ web/skins
 deployment/deployment.retry
 
 tmp/
+
+/build/database/*
+!/build/database/01.Database_Schema.sql
+!/build/database/02.Default_Data.sql
