--- a/composer.json
+++ b/composer.json
@@ -24,18 +24,18 @@
 		"wmde/freezable-value-object": "~2.0",
 		"wmde/fun-validators": "~3.0.0",
 
-		"symfony/config": "^5.2",
-		"symfony/console": "^5.2",
-		"symfony/dotenv": "^5.2",
-		"symfony/filesystem": "^5.2",
-		"symfony/framework-bundle": "^5.2",
-		"symfony/http-foundation": "^5.2",
+		"symfony/config": "~5.2.0",
+		"symfony/console": "~5.2.0",
+		"symfony/dotenv": "~5.2.0",
+		"symfony/filesystem": "~5.2.0",
+		"symfony/framework-bundle": "~5.2.0",
+		"symfony/http-foundation": "~5.2.0",
 		"symfony/monolog-bundle": "^3.6",
-		"symfony/property-access": "^5.2",
-		"symfony/stopwatch": "^5.2",
-		"symfony/twig-bridge": "^5.2",
-		"symfony/validator": "^5.2",
-		"symfony/yaml": "^5.2",
+		"symfony/property-access": "~5.2.0",
+		"symfony/stopwatch": "~5.2.0",
+		"symfony/twig-bridge": "~5.2.0",
+		"symfony/validator": "~5.2.0",
+		"symfony/yaml": "~5.2.0",
 
 		"airbrake/phpbrake": "~0.7",
 		"doctrine/migrations": "~3.0",
